bjshaf-app/src/App.css
.App {
    text-align: center;
    height: 100vh;
}

body {
    background-image: url('../public/images/background_slide.webp');
    background-size: cover;
    background-attachment: scroll; /* or 'scroll' if you want the image to scroll with the page */
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    height: 100vh; /* 100% of the viewport height */
    overflow: hidden; /* Hide overflow to prevent external scroll */
}

/*============================= Style the landing page ==============================*/
.landingPage {
    background-image: url('../public/images/background_final2.webp');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: top;
    position: absolute; /* or 'fixed' depending on your needs */
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}

.floatingButton {
    display: flex; /* Use flexbox for layout */
    justify-content: center; /* Center items horizontally */
    align-items: center; /* Center items vertically */
    position: absolute; /* Absolute positioning relative to the container */
    bottom: 0; /* Align to the bottom of the container */
    left: 50%; /* Align center to the middle */
    transform: translateX(
        -50%
    ); /* Shift it back by half its width to truly center it */
    height: 6vh; /* Height of the circle */
    width: 7vw; /* Width of the circle */
    margin-bottom: 2vh;
    background-color: transparent; /* White background color */
    font-family: 'Roboto', sans-serif;
    font-size: 16px; /* Medium text size */
    font-weight: 500; /* Medium font weight */
    border: none; /* No border for a clean look */
    border-radius: 5px; /* Slightly rounded corners */
    cursor: pointer; /* Pointer cursor on hover */
    text-align: center; /* Center the text inside */
    text-decoration: none; /* Remove underline from links if needed */
    transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition for hover effects */
}

.landingButton {
    border: none;
    color: black; /* White text color */
    padding: 10px 20px; /* Padding inside the button */
    font-size: 16px; /* Appropriate font size */
    font-weight: bold; /* Bold text */
    border-radius: 5px; /* Rounded corners */
    text-transform: uppercase; /* Uppercase text for a more professional look */
    cursor: pointer; /* Cursor indicates the element is clickable */
    transition: border 0.3s ease-in-out;
    width: auto;
    height: auto;
}

.landingButton:hover {
    background-color: #c590cc; /* Slightly lighter shade for hover effect */
    color: #333; /* Dark text color on hover for contrast */
}

/*=====================================================================================*/

/*============================= Style the Swiper story panels ==============================*/

swiper-container {
    background-color: #5e5c5c;
    color: #ffffff;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 60%;
    height: 60%;
    border-radius: 5%;
    border: 2px solid #ffffff;
}

swiper-container::part(button-prev) {
    color: #ffffff;
}

swiper-container::part(button-next) {
    color: #ffffff;
}

swiper-container::part(bullet-active) {
    background-color: #ffffff;
}

.storySlider {
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 75%;
    height: 75%;
}

.storySliderContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 150vh;
    width: 100%;
}

.titleSlide {
    text-align: center;
    justify-content: center; /* Center horizontally */
    align-items: center; /* Center vertically */
    display: grid;
    place-items: center; /* Centers both horizontally and vertically */
    height: 100%; /* Set a specific height if needed */
    overflow: hidden; /* Prevents content from spilling out */
}

.titleSlide img {
    margin-left: 1vw;
    width: 70vw;
    height: 70vh; /* Keeps the aspect ratio of the image */
}

.paragraphWrapper {
    font-size: 1.2em;
    padding-left: 1vw;
    padding-right: 1vw;
    max-width: 75%; /* Adjust the width of the paragraph */
    text-align: center;
    margin: auto; /* Centers the div in the container */
    margin-top: 5vh;
    width: 100%; /* Ensures it takes full width of the max-width */
}

.panelImage {
    margin-top: 1vh;
}
.panelImage img {
    max-width: 50%; /* Makes sure the image is responsive */
    width: auto;
    height: auto; /* Keeps the aspect ratio of the image */
}

.headshot {
    margin-top: 1vh;
}

.skipToEndButton {
    display: flex; /* Use flexbox for layout */
    justify-content: center; /* Center items horizontally */
    align-items: center; /* Center items vertically */
    position: absolute; /* Absolute positioning relative to the container */
    bottom: 0; /* Align to the bottom of the container */
    left: 50%; /* Align center to the middle */
    transform: translateX(
        -50%
    ); /* Shift it back by half its width to truly center it */
    height: 4vh; /* Height of the circle */
    width: 7vw; /* Width of the circle */
    margin-top: 26vh;
    background-color: white; /* White background color */
    color: #333; /* Dark text for contrast */
    font-family: 'Roboto', sans-serif; /* Assuming you're using Roboto elsewhere */
    font-size: 16px; /* Medium text size */
    font-weight: 500; /* Medium font weight */
    border: none; /* No border for a clean look */
    border-radius: 5px; /* Slightly rounded corners */
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
    cursor: pointer; /* Pointer cursor on hover */
    text-align: center; /* Center the text inside */
    text-decoration: none; /* Remove underline from links if needed */
    transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition for hover effects */
}

.skipToStartButton {
    display: flex; /* Use flexbox for layout */
    justify-content: center; /* Center items horizontally */
    align-items: center; /* Center items vertically */
    position: absolute; /* Absolute positioning relative to the container */
    bottom: 0; /* Align to the bottom of the container */
    left: 50%; /* Align center to the middle */
    transform: translateX(
        -50%
    ); /* Shift it back by half its width to truly center it */
    height: 6vh; /* Height of the circle */
    width: 7vw; /* Width of the circle */
    margin-top: 24vh;
    background-color: white; /* White background color */
    color: #333; /* Dark text for contrast */
    font-family: 'Roboto', sans-serif; /* Assuming you're using Roboto elsewhere */
    font-size: 16px; /* Medium text size */
    font-weight: 500; /* Medium font weight */
    border: none; /* No border for a clean look */
    border-radius: 5px; /* Slightly rounded corners */
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
    cursor: pointer; /* Pointer cursor on hover */
    text-align: center; /* Center the text inside */
    text-decoration: none; /* Remove underline from links if needed */
    transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition for hover effects */
}

.disclaimer {
    position: absolute;
    bottom: 6vh;
    width: 90%;
    color: white;
    padding: 10px;
    text-align: center;
}

.header3 {
    color: white;
}

.disclaimerParagraph {
    color: red;
}

/*====================================================================================*/

.footer {
    color: #ffffff;
}

/*============================= Style the navigation bar ==============================*/
/* Style the navbar to sit at the top of the page */
.navbar {
    display: flex; /* Use flexbox for layout */
    flex-direction: row; /* Align items horizontally */
    justify-content: center; /* Center items horizontally */
    align-items: center; /* Center items vertically */
    height: 10vh; /* Height of the navbar */
    position: absolute; /* Make it stick to the top */
    top: 0;
    left: 0;
    right: 0; /* Stretch to full width */
    width: 100vw; /* Full width */
    z-index: 1000; /* Ensure it stays on top of other content */
    text-align: center;
}

/* Styling for each button */
.navbar button {
    background-color: transparent;
    border: none;
    color: white; /* White text color */
    padding: 10px 20px; /* Padding inside the button */
    font-size: 16px; /* Appropriate font size */
    font-weight: bold; /* Bold text */
    border-radius: 5px; /* Rounded corners */
    text-transform: uppercase; /* Uppercase text for a more professional look */
    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effects */
    cursor: pointer; /* Cursor indicates the element is clickable */
    transition: border 0.3s ease-in-out;
    width: auto;
    margin-right: 3vw;
}

.navbar button :last-child {
    margin-right: 0;
}

/* Hover state for buttons */
.navbar button:hover {
    background-color: #c590cc; /* Slightly lighter shade for hover effect */
    color: #333; /* Dark text color on hover for contrast */
}

.navbar button.active {
    background-color: #c590cc; /* Slightly lighter shade for hover effect */
    color: #333; /* Dark text color on hover for contrast */
}

/*=====================================================================================*/

/*============================= Style the Projects grid ==============================*/

.projectContainer {
    display: flex; /* Establishes a flex container */
    align-items: center; /* Vertically aligns the children in the middle */
    justify-content: space-between; /* Spaces the children out with equal space between them */
    margin: 1vw; /* Adds some margin around the slide for spacing */
}

.projectImage {
    flex: 1; /* Takes up 1 portion of the available space */
    padding-right: 1vw; /* Adds some padding between the image and the description */
}

.projectImage img {
    width: 100%; /* Makes the image expand to fill the container */
    height: auto; /* Keeps the image aspect ratio intact */
    border-radius: 15px; /* Rounded corners */
}

.projectContent {
    font-size: 1.3em;
    align-items: center;
    width: 40%;
    max-width: 40%;
    display: flex;
    flex-direction: column; /* Stacks children vertically */
    flex: 1; /* Takes up the remaining space next to the image */
    padding-left: 20px; /* Adds some space between the image and this content */
}

.projectDescription,
.projectTechnologies {
    border-radius: 15px;
    color: white;
    flex: 2; /* Takes up 2 portions of the available space, making it larger than the image section */
    padding-left: 1vw; /* Adds some padding for spacing */
    width: 60%;
    padding: 1vh;
}

.projectDescription {
    background-color: #000000c0;
}

.projectTechnologies {
    background-color: #ff0101c0;
    margin-top: 3vh;
}

.projectTechnologies a {
    color: white;
}

.projectDescription p {
    margin-top: 0; /* Removes top margin from the heading for a cleaner look */
}

.projectDescription a {
    color: white;
}
/*====================================================================================*/

/*================================== Style the Contact Me Stuff=======================*/

.contactMe {
    background-color: #ff8c00;
}
/*====================================================================================*/
.keen-slider {
    display: flex;
    flex-direction: column;
    align-items: center; /* Align horizontally center */
    justify-content: center; /* Align vertically center */
    height: 100%;
    width: 100%;
}

.keen-slider__slide {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%; /* Each slide's height is the same as the container's height */
    font-size: 20px;
    min-height: 100vh;
    max-height: 100vh;
}

